# NLP-Telescope-User

./: .gitignore  README.md  download.sh  pyproject.toml
data/class/: src-c.txt  sys3-class.txt
data/dialo/: 472_PMUL0998_json_2-8_context.txt  472_PMUL0998_json_2-8_truth_answer.txt
data/examples/class/: ref-c.txt  sys1-class.txt
data/examples/dialo/: 472_PMUL0998_json_2-8_model_answer.txt
data/examples/sum/: bart-base-cnn-8  distilbart-cnn-8  highlights-8  src-article-8
data/sum/: sents_BBC_NEWS_Summary_001_tech_ref.txt  sents_BBC_NEWS_Summary_001_tech_src.txt  sysA.txt  sysB.txt  sysC.txt
telescope/: app.py  cli.py  collection_testsets.py  plot.py  plotting.py  testset.py  utils.py
telescope/bias_evaluation/: __init__.py  bias_evaluation.py  bias_result.py  gender_bias_evaluation.py
telescope/filters/: __init__.py  duplicates.py  length.py  ner.py
telescope/metrics/: __init__.py  metric.py  result.py
telescope/metrics/accuracy/: __init__.py  metric.py
telescope/metrics/demographic_parity/: __init__.py  metric.py
telescope/metrics/f1_score/: __init__.py  metric.py
telescope/metrics/gleu/: metric.py
telescope/metrics/precision/: __init__.py  (+1 more)
telescope/tasks/: __init__.py  task.py
telescope/universal_metrics/: __init__.py  average.py  median.py  pairwise_comparison.py  social_choice_theory.py  universal_metric.py  universal_metric_results.py  weighted_mean.py
tests/: test_plots.py
tests/data/: systems_names.txt
tests/unit/: test_testset.py
user/: bias_evaluations.yaml  filters.yaml  metrics.yaml  tasks.yaml  universal_metrics.yaml
(+44 files in other folders)
