[tool.poetry]
name = "nlp-telescope"
version = "0.0.1"
description = "A visual platform for contrastive evaluation of NLP systems"
authors = ["Rita Oliveira"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/RitaTMCO/NLP-Telescope-User"
repository = "https://github.com/RitaTMCO/NLP-Telescope-User"
documentation = "https://github.com/RitaTMCO/NLP-Telescope-User"
keywords = [
    "Machine Translation", 
    "Evaluation",
    "Unbabel",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    {include = "telescope"},
]
include = [
    "LICENSE",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0,!=3.9.7"
unbabel-comet = "<=1.1.3"
bert-score = ">=0.3.7"
sacrebleu = ">=2.0.0"
stanza = ">=1.2"
streamlit = "1.17.0"
plotly = ">=4.14.3"
numpy = ">=1.20.0"
pytorch-nlp = "0.5.0"
scipy = ">=1.5.4"
rouge = ">=1.0.1"
scikit-learn = ">=1.2.2"
evaluate = ">=0.4.0"
nltk = ">3.8.0"
spacy = "=3.2.5"
fairlearn = ">=0.8.0" 
optuna = ">=3.2.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
black = "^20.8b1"

[tool.poetry.scripts]
telescope = 'telescope.cli:telescope'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
